change API to avoid using NS_COMFALSE.  As jband puts it: NS_COMFALSE generally sucks.  NS_COMFALSE is going away. fixes bug #11579